# hpe-networking-central-mcp

./: .dockerignore  .env.example  .gitignore  .instructions.md  AGENTS.md  ANALYSIS.md  Dockerfile  LICENSE  README.md  SECURITY.md  central-mcp.code-workspace  pyproject.toml  test_config_validation.py  test_dynamic_ddl.py  test_e2e.py  test_entity_registry.py  test_graph.py  test_monitoring_seed.py  test_provenance.py  test_schema_generator.py  test_search.py
.githooks/: pre-push
.github/workflows/: build-and-push.yml  tests.yml  update-knowledge-db.yml
docs/: DEVELOPMENT.md  TECHNICAL_OVERVIEW.md  compiler-mcp-tooling-proposal.md
docs/adr/: 004-data-provenance.md  005-unified-search.md  006-remove-prebuilt-ontology.md  007-skeleton-glossary-schema.md  008-schema-as-graph.md  009-graph-as-primary-api-discovery.md  010-graph-only-discovery-and-validation.md  011-compiler-pipeline.md  011-real-spec-ingestion-invariants.md  012-tool-aliasing-and-response-caps.md  013-eviction-integrity-and-batch-reads.md
examples/: claude_desktop_config.example.json
presentation/: slides.typ  speaker-notes.md
scripts/: build_knowledge_db.py  ci_docker_v2_smoke.sh  dev_test.sh  hydrate_test_fixtures.sh  measure_schema_sizes.py  report_compiler_traversal.py  report_semantic_corpus.py  run_entity_mapping.py  smoke_oas_e2e.py  test_changed.sh
seeds/: analyze_topology.meta.json  analyze_topology.py  get_device_inventory.meta.json  get_device_inventory.py  get_device_summary.meta.json  get_device_summary.py  onboard_device.meta.json  onboard_device.py
src/hpe_networking_central_mcp/: __init__.py  __main__.py  _http_core.py  api_tree.py  central_client.py  central_helpers.py  config.py  glp_spec_provider.py  instructions.py  knowledge_db.py  logging.py  oas_index.py  oas_normalize.py  oas_schema_graph.py  oas_scraper.py  schema_generator.py  server.py  spec_provider.py  vsg_scraper.py
src/hpe_networking_central_mcp/compiler/: __init__.py  artifact_cache.py  ast_builder.py  ast_schema.py  ast_writer.py  catalog_identity.py  constraints.py  detail_reader.py  frontend.py  projection_parity.py  projection_writer.py  semantic_builder.py  semantic_metrics.py  semantic_schema.py  semantic_writer.py  traversal_reader.py  traversal_report.py
src/hpe_networking_central_mcp/entity_mapping/: __init__.py  entities.py  llm_mapper.py  mapper.py  pattern_rules.py  pipeline.py  runner.py  static_rules.py
src/hpe_networking_central_mcp/graph/: __init__.py  invariants.py  ipc_server.py  manager.py  population.py  schema.py
src/hpe_networking_central_mcp/prompts/: workflows.py
src/hpe_networking_central_mcp/resources/: docs.py  graph.py
src/hpe_networking_central_mcp/script_runtime/: __init__.py  sitecustomize.py
src/hpe_networking_central_mcp/seeds/: _provenance.py  enrich_topology.meta.json  enrich_topology.py  onboard_device.meta.json  populate_base_graph.meta.json  populate_base_graph.py  populate_config_policy.meta.json  populate_config_policy.py  populate_monitoring.meta.json  populate_monitoring.py
src/hpe_networking_central_mcp/tools/: api_call.py  api_call_policy.py  api_call_validation.py  api_catalog.py  compiler.py  describe.py  execution.py  graph.py  inventory.py  scripts.py  search.py
tests/: conftest.py  test_api_call_batch.py  test_api_call_gate.py  test_api_call_validation.py  test_api_catalog.py  test_api_tree.py  test_build_knowledge_db_ast.py  test_central_client.py  test_cli_bridge.py  test_compiler_artifact_cache.py  test_compiler_ast.py  test_compiler_detail_reader.py  test_compiler_frontend.py  test_compiler_projection_writer.py  test_compiler_semantic.py  test_compiler_tools.py  test_compiler_traversal_reader.py  test_compiler_traversal_report.py  test_config.py  test_config_validation.py  test_describe_endpoint.py  test_e2e.py  test_endpoint_catalog_resource.py  test_execution.py  test_graph.py  test_instructions_catalog.py  test_knowledge_db.py  test_monitoring_seed.py  test_no_ignore_errors_copy.py  test_oas_normalize.py  test_paginate.py  test_projection_parity.py  test_query_graph.py  test_readonly.py  test_real_spec_ingest_smoke.py  test_schema_graph_seed.py  test_schema_overhaul.py  test_schema_property_graph.py  test_scripts_tool.py  test_search.py  (+4 more)
tests/fixtures/oas/real_excerpts/: central_config_addsitetositecollectionv1.json  central_config_createairgroupservicedefinitionsservicebyid.json  central_config_createmvrpprofilebyid.json  glp_audit_logs.json
