[project]
name = "hpe-networking-central-mcp"
version = "0.1.0"
description = "MCP Server for HPE Aruba Networking Central — Code Interpreter Pattern"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "kuzu>=0.4",
    "networkx>=3.0",
]

[project.scripts]
hpe-networking-central-mcp = "hpe_networking_central_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpe_networking_central_mcp"]
artifacts = ["src/hpe_networking_central_mcp/seeds/*.json"]

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
