[project]
name = "hpe-networking-central-mcp"
version = "0.2.0"
description = "MCP Server for HPE Aruba Networking Central — Code Interpreter Pattern"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{name = "Till Belz"}]
keywords = ["mcp", "aruba", "hpe", "networking", "central", "greenlake", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "real_ladybug>=0.15",
    "networkx>=3.0",
]

[project.scripts]
hpe-networking-central-mcp = "hpe_networking_central_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpe_networking_central_mcp"]
artifacts = ["src/hpe_networking_central_mcp/seeds/*.json"]

[tool.uv]
python-preference = "only-managed"

[project.urls]
Repository = "https://github.com/tbelz/hpe-networking-central-mcp"
Issues = "https://github.com/tbelz/hpe-networking-central-mcp/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
markers = [
    "integration: live API integration tests (require Central credentials in .env)",
]
