[project]
name = "hpe-networking-central-mcp"
version = "0.2.0"
description = "MCP Server for HPE Aruba Networking Central — Code Interpreter Pattern"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{name = "Till Belz"}]
keywords = ["mcp", "aruba", "hpe", "networking", "central", "greenlake", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "real_ladybug>=0.15.3",
    "networkx>=3.0",
    "pyarrow>=15.0",
]

[project.scripts]
hpe-networking-central-mcp = "hpe_networking_central_mcp.server:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpe_networking_central_mcp"]
artifacts = ["src/hpe_networking_central_mcp/seeds/*.json"]

[tool.uv]
python-preference = "only-managed"

[project.urls]
Repository = "https://github.com/tbelz/hpe-networking-central-mcp"
Issues = "https://github.com/tbelz/hpe-networking-central-mcp/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --timeout=120"
markers = [
    "unit: fast in-process tests (no network, no credentials)",
    "integration: integration tests; auto-skip when Central credentials are missing",
    "live_api: tests that hit the live Central / GreenLake API (read-only); subset of integration",
    "slow: tests that take more than a few seconds",
    "oas_ingest: end-to-end OAS→graph ingestion smoke (real spec excerpts); fast subset for pre-build validation",
    "compiler: tests for the OAS→graph compiler pipeline (ADR 011)",
    "real_spec: requires the real Central spec cache; auto-skipped when unavailable",
]

[tool.coverage.run]
source = ["src/hpe_networking_central_mcp"]
omit = [
    "src/hpe_networking_central_mcp/seeds/*",
    "src/hpe_networking_central_mcp/script_runtime/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]
